# SmartSort

./: .gitignore  LICENSE  README.md  README_INSTALL.md  folder_name_cache.json  requirements.txt  vercel.json
.pytest_cache/: .gitignore
agents/: clustering_agent.py  extractor_router.py  file_relocation_agent.py  folder_naming_agent.py  ingestion_manager.py
agents/extractors/: code_extractor.py  docx_extractor.py  ocr_extractor.py  text_extractor.py
api/: validate.py
backend/: README.md  folder_name_cache.json  requirements.txt  sorter.py
backend/agents/: __init__.py  assignment_agent.py  clustering_agent.py  embedding_agent.py  extractor_router.py  file_relocation_agent.py  folder_naming_agent.py  identity_utils.py  index_manager.py  ingestion_manager.py
backend/core/: constants.py  license.py  utils.py
backend/daemon/: daemon_runner.py  model_server.py  reassign_cli.py  watcher.py
backend/pipeline/: run_pipeline.py  tauri_pipeline.py
backend/tests/: benchmark_clustering.py  test_assignment_agent.py  test_clustering.py  test_embedding.py  (+5 more)
core/: models.py  utils.py
docs/: competitor_comparison.md  go_to_market_plan.md  pricing_page_content.md
fileSortVenv/: pyvenv.cfg
frontend/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs  main.rs.backup
pipeline/: cli.py  run_pipeline.py
tests/: test_import.py  test_ingestion.py  test_ingestion_manager.py
(+45 files in other folders)
